--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "xcode": "open ios/*.xcworkspace",
     "open-android-studio": "open -a /Applications/Android\\ Studio.app",
     "bugsnag:create-build": "bugsnag-cli create-build",
-    "bugsnag:upload-android": "bugsnag-cli upload react-native-android"
+    "bugsnag:upload-android": "./node_modules/.bin/bugsnag-cli upload react-native-android"
   },
   "dependencies": {
     "@bugsnag/react-native": "^7.22.2",
-    "@bugsnag/react-native-performance": "^2.0.0",
+    "@react-native-masked-view/masked-view": "^0.3.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.2",
     "react": "18.2.0",
     "react-native": "0.72.7",
-    "react-native-file-access": "^3.0.4"
+    "react-native-file-access": "^3.0.4",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-navigation": "^7.37.2",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
